--- a/src/style.scss
+++ b/src/style.scss
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Ysabeau:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap'); // This for made by anwar
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  background-color: rgb(245, 245, 245);
+  background-color: rgb(236, 236, 236);
+  font-family: 'Ysabeau', sans-serif;
 }
 button {
   cursor: pointer;
