--- a/src/Regsiter/register.scss
+++ b/src/Regsiter/register.scss
@@ -25,14 +25,15 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        background-color: gray;
         // background-color: rgb(206, 206, 206);
-        background-color: black;
+        // background-color: black;
         padding: 1rem;
         border: 1px gray solid;
         border-radius: 10px;
         gap: 1rem;
         color: white; // Color for all texts
-        .left{
+        .re-left{
             // flex: 1 1 350px;
             width:min(100%,40rem);
             display: flex;
@@ -67,7 +68,7 @@
                 cursor: pointer;
             }
         }
-        .right{
+        .re-right{
             width:min(100%,30rem);
             a{
                 display: flex;
@@ -80,10 +81,10 @@
         }
         @media only screen and (max-width:820px) {
                 flex-wrap: wrap;
-                .left{
+                .re-left{
                     width: 100%;
                 }
-                .right{
+                .re-right{
                     width:100%;
                     margin-top: 2rem;
                    
