--- a/src/Left/left.scss
+++ b/src/Left/left.scss
@@ -1,7 +1,7 @@
 .left {
 //   border: 1px red solid;
   flex: 0.2;
-  padding: 1rem;
+  // padding: 1rem;
   ul {
     // border: 1px red solid;
     padding: 1rem;
