--- a/src/Mid/mid.scss
+++ b/src/Mid/mid.scss
@@ -1,7 +1,10 @@
 .mid {
   flex: 0.6;
-  border: 1px red solid;
+  // border: 1px red solid;
   padding: 1rem;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 3px 3px 5px rgb(207, 207, 207);
   .mid-stories {
     display: flex;
     overflow-x: scroll;
@@ -12,7 +15,7 @@
       height: 0.3vw;
     }
     &::-webkit-scrollbar-thumb {
-      background-color: lightgray;
+      background-color: rgb(201, 201, 201);
     }
     span {
       border: 1px lightgray solid;
@@ -49,7 +52,7 @@
       overflow: hidden;
       z-index: 2;
       cursor: pointer;
-      video{
+      video {
         position: absolute;
         top: 0;
         right: 0;
@@ -78,31 +81,100 @@
       }
     }
 
-    .viewStory{
-        position: fixed;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
+    .viewStory {
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.644);
+      padding: 2rem;
+      z-index: 3;
+      video {
+        width: 100%;
+        height: 100%;
+      }
+      h6 {
+        font-size: 1.5rem;
+        color: white;
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        cursor: pointer;
+      }
+    }
+  }
+  // ================================ Post =================
+  .post-form {
+    // border: 1px red solid;
+    margin-top: 2rem;
+    form {
+      display: flex;
+      justify-content: space-between;
+      // flex-wrap: wrap;
+      align-items: center;
+      @media only screen and (max-width:1000px) {
+        flex-wrap: wrap;
+        justify-content: start;
+        .post-form-btns{
+          margin-top: 1rem;
+          padding-left: 0.5rem;
+        }
+      }
+      a{
+        display: flex;
+        width: 2rem;
+        img{
+          width: 100%;
+          height: 100%;
+          border-radius: 10px;
+        }
+      }
+      input {
+        width: 80%;
+        font-size: 1rem;
+        padding: 0.5rem;
+        outline: none;
+        border: none;
+        background-color: inherit;
+      }
+      .post-form-btns {
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: rgba(0, 0, 0, 0.644);
-        padding: 2rem;
-        z-index: 3;
-        video{
-            width: 100%;
-            height: 100%;
-        }
-        h6{
+        label {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-right: 1rem;
+          svg {
             font-size: 1.5rem;
-            color: white;
-            position: absolute;
-            top: 1rem;
-            right: 1rem;
-            cursor: pointer;
-
+          }
         }
+        button{
+          display: flex;
+          min-width: 6rem;
+          justify-content: space-evenly;
+          align-items: center;
+          background-color: #1877F2;
+          border: none;
+          outline: none;
+          padding: 0.5rem 0;
+          border-radius: 5px;
+          h3{
+            font-size: 1rem;
+            color: white;
+          }
+          svg{
+            font-size: 1rem;
+            fill: white;
+            cursor: pointer;
+          }
+        }
+      }
     }
   }
 }
