--- a/src/Regsiter/register.scss
+++ b/src/Regsiter/register.scss
@@ -1,94 +1,118 @@
-
-.register{
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    .madeBy{
-        margin-top: 3rem;
-        font-size: 1rem;
-        font-family: 'Dancing Script', cursive;
-        cursor: pointer;
-        color: black ;
-        font-weight: bold;
-        text-decoration: none;
-        transition: 0.5s;
-        &:hover{
-            transition: 0.5s;
-            color: #1877F2;
-        }
-        
+.register {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  .madeBy {
+    margin-top: 3rem;
+    font-size: 1rem;
+    font-family: "Dancing Script", cursive;
+    cursor: pointer;
+    color: black;
+    font-weight: bold;
+    text-decoration: none;
+    transition: 0.5s;
+    &:hover {
+      transition: 0.5s;
+      color: #1877f2;
     }
-    .register-container{
-        width: min(100% - 3%,1500px);
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: gray;
-        // background-color: rgb(206, 206, 206);
-        // background-color: black;
-        padding: 1rem;
+  }
+  .register-container {
+    width: min(100% - 3%, 1500px);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: gray;
+    // background-color: rgb(206, 206, 206);
+    // background-color: black;
+    padding: 1rem;
+    border: 1px gray solid;
+    border-radius: 10px;
+    gap: 1rem;
+    color: white; // Color for all texts
+    .re-left {
+      // flex: 1 1 350px;
+      width: min(100%, 40rem);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      input {
+        padding: 0.5rem;
+        font-size: 1rem;
+        outline: none;
         border: 1px gray solid;
         border-radius: 10px;
-        gap: 1rem;
-        color: white; // Color for all texts
-        .re-left{
-            // flex: 1 1 350px;
-            width:min(100%,40rem);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 1rem;
-            input{
-                padding: 0.5rem;
-                font-size: 1rem;
-                outline:none;
-                border: 1px gray solid;
-                border-radius: 10px;
-                width: 100%;
-            }
-            button{
-                background-color: #1877F2;
-                color: white;
-                border: none;
-                outline: none;
-                width: min(100% - 3%,200px);
-                padding: 0.5rem 0;
-                border-radius: 10px;
-                transition: 0.5s;
-                &:hover{
-                    transition: 0.5s;
-                background-color: #0a4faa;
-
-                }
-            }
-            h5{
-                text-decoration: underline;
-                cursor: pointer;
-            }
+        width: 100%;
+      }
+      button {
+        background-color: #1877f2;
+        color: white;
+        border: none;
+        outline: none;
+        width: min(100% - 3%, 200px);
+        padding: 0.5rem 0;
+        border-radius: 10px;
+        transition: 0.5s;
+        font-size: 0.9rem;
+        &:hover {
+          transition: 0.5s;
+          background-color: #0a4faa;
         }
-        .re-right{
-            width:min(100%,30rem);
-            a{
-                display: flex;
-                img{
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
-            }
+      }
+      .google-btn {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: rgb(88, 88, 88);
+        color: white;
+        border: none;
+        outline: none;
+        width: min(100% - 3%, 200px);
+        padding: 0.5rem 0;
+        border-radius: 10px;
+        transition: 0.5s;
+        font-size: 0.9rem;
+        cursor: pointer;
+        &:hover {
+          transition: 0.5s;
+          background-color: #0a4faa;
         }
-        @media only screen and (max-width:820px) {
-                flex-wrap: wrap;
-                .re-left{
-                    width: 100%;
-                }
-                .re-right{
-                    width:100%;
-                    margin-top: 2rem;
-                   
-                }
+        svg{
+            font-size: 1.7rem;
+            background-color: white;
+            padding: 0.2rem;
         }
+        h4{
+            font-size: 0.9rem;
+        }
+      }
+      h5 {
+        text-decoration: underline;
+        cursor: pointer;
+      }
     }
+    .re-right {
+      width: min(100%, 35rem);
+      a {
+        display: flex;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+    }
+    @media only screen and (max-width: 820px) {
+      flex-wrap: wrap;
+      .re-left {
+        width: 100%;
+      }
+      .re-right {
+        width: 100%;
+        margin-top: 2rem;
+      }
+    }
+  }
 }
