--- a/src/Mid/mid.scss
+++ b/src/Mid/mid.scss
@@ -93,6 +93,19 @@
         object-fit: cover;
         filter: brightness(0.7);
       }
+      .image-story{
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: brightness(0.7);
+        
+      }
       .photoURL {
         display: flex;
         width: 3rem;
@@ -119,12 +132,18 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: rgba(0, 0, 0, 0.644);
+      background: linear-gradient(
+      to top,
+      rgb(0, 0, 0) 10%,
+      rgba(0, 0, 0, 0.295) 60%,
+      rgb(0, 0, 0) 100%
+    );
       padding: 2rem;
       z-index: 3;
-      video {
+      video,img {
         width: 100%;
         height: 100%;
+        object-fit: contain;
       }
       h6 {
         font-size: 1.5rem;
