add to posts is done

--- a/src/Mid/mid.scss
+++ b/src/Mid/mid.scss
@@ -288,6 +288,9 @@
           svg {
             font-size: 1.5rem;
           }
+          input{
+            display: none;
+          }
         }
         button{
           display: flex;
