--- a/src/Mid/mid.scss
+++ b/src/Mid/mid.scss
@@ -202,6 +202,11 @@
         font-size: 3rem;
         fill: white;
         filter: drop-shadow(2px 3px 5px black);
+        &:hover{
+          transition: 0.5s;
+          transform: scale(0.9);
+          fill: #1877F2;
+        }
       }
       h3 {
         font-size: 0.9rem;
@@ -245,7 +250,7 @@
   // ================================ Post =================
   .post-form {
     // border: 1px red solid;
-    margin-top: 2rem;
+    margin: 2rem 0;
     form {
       display: flex;
       justify-content: space-between;
@@ -313,6 +318,55 @@
           }
         }
       }
+    }
+  }
+  // =================================== POSTS =============
+  .posts{
+    .singlePost{
+      border: 1px lightgray solid;
+      width: min(100% - 3%,600px);
+      margin: 1rem auto;
+      padding: 0.5rem;
+      cursor: pointer;
+      box-shadow: 3px 3px 5px rgb(187, 187, 187);
+      a{
+        display: flex;
+        img{
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      .postVideo{
+       position: relative;
+        video{
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+        .playVideoPostContainer{
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          .playVideoPost{
+            font-size: 4rem;
+            fill: white;
+            filter: drop-shadow(2px 3px 5px black);
+            transition: 0.5s;
+            &:hover{
+              transition: 0.5s;
+              transform: scale(0.9);
+              fill: #1877F2;
+            }
+          }
+        }
+      }
+     
     }
   }
 }
