--- a/src/Left/left.scss
+++ b/src/Left/left.scss
@@ -1,7 +1,10 @@
 .left {
 //   border: 1px red solid;
-  flex: 0.2;
+  // flex: 0.2;
+  // min-width:15vw;
   // padding: 1rem;
+  // padding-right: 4rem;
+  width: 20%;
   ul {
     // border: 1px red solid;
     padding: 1rem;
