--- a/src/Header/header.scss
+++ b/src/Header/header.scss
@@ -3,6 +3,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 1rem 2rem;
   .logo {
     width: fit-content;
     display: flex;
