--- a/src/Home/home.scss
+++ b/src/Home/home.scss
@@ -4,10 +4,11 @@
 
     width: min(100% - 1%,1700px);
     margin: 0 auto;
-    padding: 1rem;
+    // padding: 1rem;
     .home-container{
         display: flex;
         justify-content: space-between;
         gap: 1rem;
+       
     }
 }
