--- a/src/Mid/mid.scss
+++ b/src/Mid/mid.scss
@@ -189,13 +189,13 @@
       }
       .photoURL {
         display: flex;
-        width: 3rem;
+        width: 2.5rem;
         margin-right: auto;
         img {
           width: 100%;
           height: 100%;
           object-fit: cover;
-          clip-path: circle(30%);
+          clip-path: circle(50%);
         }
       }
       .play-btn{
@@ -266,11 +266,12 @@
       }
       a{
         display: flex;
-        width: 2rem;
+        width: 2.5rem;
         img{
           width: 100%;
           height: 100%;
-          border-radius: 10px;
+          // border-radius: 10px;
+          clip-path: circle(50%);
         }
       }
       input {
@@ -335,12 +336,25 @@
         font-size: 1.2rem;
         border-bottom: 1px solid #cfcfcf;
         padding-bottom: 1rem;
+        display: flex;
+        align-items: center;
+        a{
+          display: flex;
+          width: 2.5rem;
+          margin-right: 1rem;
+          img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            clip-path: circle(50%);
+          }
+        }
       }
       a{
         display: flex;
         img{
           width: 100%;
-          height: 100%;
+          max-height: 30rem;
           object-fit: cover;
         }
       }
@@ -432,9 +446,23 @@
           display: flex;
           justify-content: space-between;
           align-items: center;
+          margin-bottom: 0.5rem;
          h6{
           color: gray;
           font-size: 0.9rem;
+          display: flex;
+          align-items: center;
+          a{
+            display: flex;
+            width: 1.5rem;
+            margin-right: 1rem;
+            img{
+              width: 100%;
+              height: 100%;
+              // border-radius: 10px;
+              clip-path: circle(50%);
+            }
+          }
          }
          svg{
           font-size: 0.9rem;
