added the functions of the media and deleting them

--- a/src/People/people.scss
+++ b/src/People/people.scss
@@ -1,8 +1,8 @@
 .people{
-    border: 1px red solid;
+    // border: 1px red solid;
     width: 70%;
     .people-container{
-        border: 2px red solid;
+        // border: 2px red solid;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
