--- a/src/People/people.scss
+++ b/src/People/people.scss
@@ -1,6 +1,7 @@
 .people{
     // border: 1px red solid;
     width: 70%;
+    padding:0 1rem;
     .people-container{
         // border: 2px red solid;
         display: flex;
