--- a/src/Left/left.scss
+++ b/src/Left/left.scss
@@ -11,7 +11,7 @@
     background-color: white;
     border-radius: 10px;
     box-shadow: 3px 3px 5px rgb(207, 207, 207);
-    li {
+    .list {
     //   border: 1px red solid;
       display: flex;
         align-items: center;
@@ -39,6 +39,17 @@
             margin-left: 1rem;
             color: rgb(68, 68, 68);
         }
+    }
+    .listEffect{
+      border-left: 3px solid #1877F2;
+      background-color: rgb(248, 248, 248);
+      h4{
+          color: #1877F2;
+      }
+      svg{
+          fill: #1877F2;
+          color: #1877F2;
+      }
     }
   }
 }
