--- a/src/Chat/chat.scss
+++ b/src/Chat/chat.scss
@@ -8,8 +8,9 @@
 
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 1rem;
-        width: min(100%,12rem);
+        flex: 1;
     height: 80vh;
     overflow-y: auto;
     // width: 15rem;
@@ -23,6 +24,8 @@
             border: 1px #1877F2 solid;
             padding: 0.5rem;
             border-radius: 20px;
+            width: min(100% - 3%,20rem);
+
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -55,6 +58,26 @@
         h1{
             text-align: center;
         }
+        .back_btn_container{
+            display: flex;
+            justify-content:space-between;
+            align-items: center;
+            h5{
+                font-size: 1.2rem;
+            }
+            .back_btn{
+                font-size: 2rem;
+                background-color: #1877F2;
+                fill: white;
+                border-radius: 50%;
+                padding: 0.5rem;
+                cursor: pointer;
+                &:hover{
+                    background-color: #094592;
+                }
+            }
+        }
+        
         .messages_container{
             display: flex;
             flex-direction: column;
@@ -64,6 +87,40 @@
             .messages_texts{
                 border: 2px black solid;
                 height: 95%;
+                
+                .message{
+                    border: 1px red solid;
+                    width: min(100% - 3%,300px);    
+                    background-color: forestgreen; 
+                    margin-left: auto;        
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-end;  
+                    margin-bottom: 1rem;
+                    padding: 0.5rem;
+                    border-radius: 10px 0 10px 10px;     
+                    h4{
+                        word-break: break-all;
+                        color: white;
+                        font-size: 1rem;
+                    }
+                    h6{
+                        color: white;
+                        font-size: 0.8rem;
+                        margin-top: 0.5rem;
+                        font-family: 'Courier New', Courier, monospace;
+                    }
+                   
+                }
+                .messageOther{
+                    margin-right: auto !important;
+                    margin-left: 0;
+                    background-color: gray !important;
+                border-radius: 0 10px 10px 10px !important;     
+                align-items: flex-start !important;  
+
+
+                }
             }
             form{
                 width: 100%;
