--- a/src/Mid/mid.scss
+++ b/src/Mid/mid.scss
@@ -331,25 +331,34 @@
       padding: 0.5rem;
       cursor: pointer;
       box-shadow: 3px 3px 5px rgb(187, 187, 187);
-      h2{
-        margin-bottom: 1rem;
-        font-size: 1.2rem;
-        border-bottom: 1px solid #cfcfcf;
-        padding-bottom: 1rem;
-        display: flex;
-        align-items: center;
-        a{
-          display: flex;
-          width: 2.5rem;
-          margin-right: 1rem;
-          img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            clip-path: circle(50%);
-          }
-        }
+.post_top{
+  border-bottom: 1px solid #cfcfcf;
+  margin-bottom: 1rem;
+  h2{
+    padding-bottom: 1rem;
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+    a{
+      display: flex;
+      width: 2.5rem;
+      margin-right: 1rem;
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        clip-path: circle(50%);
       }
+    }
+  }
+  h4{
+    color: gray;
+    font-size: 0.8rem;
+    font-family: 'Courier New', Courier, monospace;
+  }
+}
+
+     
       a{
         display: flex;
         img{
@@ -388,7 +397,7 @@
         }
       }
       .post-btns{
-        width: min(100%,130px);
+        width: min(100%,70px);
         display: flex;
         justify-content: space-between;
         align-items: center;
