--- a/src/Home/home.scss
+++ b/src/Home/home.scss
@@ -4,6 +4,9 @@
 
     width: min(100% - 1%,1700px);
     margin: 0 auto;
+    @media only screen and (max-width:900px) {
+        width: 100%;
+      }
     // padding: 1rem;
     .home-container{
         display: flex;
