--- a/src/Media/media.scss
+++ b/src/Media/media.scss
@@ -1,7 +1,10 @@
 .media {
   width: 70%;
   padding:0 1rem;
-
+  @media only screen and (max-width:900px) {
+    width: 100%;
+    padding: 0;
+  }
   .viewStory {
     position: fixed;
     top: 0;
