--- a/src/People/people.scss
+++ b/src/People/people.scss
@@ -2,6 +2,9 @@
     // border: 1px red solid;
     width: 70%;
     padding:0 1rem;
+    @media only screen and (max-width:900px) {
+        width: 100%;
+      }
     .people-headers {
         width: min(100%, 400px);
         margin: 0 auto;
