--- a/src/Mid/mid.scss
+++ b/src/Mid/mid.scss
@@ -338,6 +338,11 @@
       padding: 0.5rem;
       cursor: pointer;
       box-shadow: 3px 3px 5px rgb(187, 187, 187);
+      .postBy{
+        color: gray;
+        padding: 0.5rem;
+       
+      }
 .post_top{
   border-bottom: 1px solid #cfcfcf;
   margin-bottom: 1rem;
